attached_assets/Pasted--GeneticTrading-alex-alex-System-Product-Name-mnt-windows-GeneticTrading-python-start-complete-sy-1752215621607_1752215621608.txt
(GeneticTrading) alex@alex-System-Product-Name:/mnt/windows/GeneticTrading$ python start_complete_system.py
INFO:__main__:🚀 Starting Complete NQ Trading System
INFO:__main__:============================================================
INFO:__main__:🚀 Starting TensorBoard...
INFO:__main__:✅ TensorBoard started on http://0.0.0.0:6006
INFO:__main__:⏳ Waiting for TensorBoard... (1/30)
INFO:__main__:✅ TensorBoard is ready!
INFO:__main__:🧠 Starting training process...
INFO:__main__:✅ Training started
INFO:__main__:⏳ Waiting for training to initialize...
[TRAINING] W0710 23:33:19.444000 42017 site-packages/torch/distributed/run.py:766]
[TRAINING] W0710 23:33:19.444000 42017 site-packages/torch/distributed/run.py:766] *****************************************
[TRAINING] W0710 23:33:19.444000 42017 site-packages/torch/distributed/run.py:766] Setting OMP_NUM_THREADS environment variable for each process to be 1 in default, to avoid your system being overloaded, please further tune the variable for optimal performance in your application as needed.
[TRAINING] W0710 23:33:19.444000 42017 site-packages/torch/distributed/run.py:766] *****************************************
[TRAINING] Traceback (most recent call last):
[TRAINING] File "/mnt/windows/GeneticTrading/main.py", line 82, in <module>
[TRAINING] from futures_env import FuturesEnv, TimeSeriesState
[TRAINING] File "/mnt/windows/GeneticTrading/futures_env.py", line 759
[TRAINING] logger.error(f"Failed to save trading table: {e}")
[TRAINING] ^
[TRAINING] SyntaxError: expected 'except' or 'finally' block
[TRAINING] Traceback (most recent call last):
[TRAINING] File "/mnt/windows/GeneticTrading/main.py", line 82, in <module>
[TRAINING] from futures_env import FuturesEnv, TimeSeriesState
[TRAINING] File "/mnt/windows/GeneticTrading/futures_env.py", line 759
[TRAINING] logger.error(f"Failed to save trading table: {e}")
[TRAINING] ^
[TRAINING] SyntaxError: expected 'except' or 'finally' block
[TRAINING] Traceback (most recent call last):
[TRAINING] File "/mnt/windows/GeneticTrading/main.py", line 82, in <module>
[TRAINING] from futures_env import FuturesEnv, TimeSeriesState
[TRAINING] File "/mnt/windows/GeneticTrading/futures_env.py", line 759
[TRAINING] logger.error(f"Failed to save trading table: {e}")
[TRAINING] ^
[TRAINING] SyntaxError: expected 'except' or 'finally' block
[TRAINING] Traceback (most recent call last):
[TRAINING] File "/mnt/windows/GeneticTrading/main.py", line 82, in <module>
[TRAINING] from futures_env import FuturesEnv, TimeSeriesState
[TRAINING] File "/mnt/windows/GeneticTrading/futures_env.py", line 759
[TRAINING] logger.error(f"Failed to save trading table: {e}")
[TRAINING] ^
[TRAINING] SyntaxError: expected 'except' or 'finally' block
[TRAINING] E0710 23:33:22.251000 42017 site-packages/torch/distributed/elastic/multiprocessing/api.py:874] failed (exitcode: 1) local_rank: 0 (pid: 42052) of binary: /home/alex/miniconda3/envs/GeneticTrading/bin/python3.12
[TRAINING] Traceback (most recent call last):
[TRAINING] File "/home/alex/miniconda3/envs/GeneticTrading/bin/torchrun", line 8, in <module>
[TRAINING] sys.exit(main())
[TRAINING] ^^^^^^
[TRAINING] File "/home/alex/miniconda3/envs/GeneticTrading/lib/python3.12/site-packages/torch/distributed/elastic/multiprocessing/errors/__init__.py", line 355, in wrapper
[TRAINING] return f(*args, **kwargs)
[TRAINING] ^^^^^^^^^^^^^^^^^^
[TRAINING] File "/home/alex/miniconda3/envs/GeneticTrading/lib/python3.12/site-packages/torch/distributed/run.py", line 892, in main
[TRAINING] run(args)
[TRAINING] File "/home/alex/miniconda3/envs/GeneticTrading/lib/python3.12/site-packages/torch/distributed/run.py", line 883, in run
[TRAINING] elastic_launch(
[TRAINING] File "/home/alex/miniconda3/envs/GeneticTrading/lib/python3.12/site-packages/torch/distributed/launcher/api.py", line 139, in __call__
[TRAINING] return launch_agent(self._config, self._entrypoint, list(args))
[TRAINING] ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
[TRAINING] File "/home/alex/miniconda3/envs/GeneticTrading/lib/python3.12/site-packages/torch/distributed/launcher/api.py", line 270, in launch_agent
[TRAINING] raise ChildFailedError(
[TRAINING] torch.distributed.elastic.multiprocessing.errors.ChildFailedError:
[TRAINING] ============================================================
[TRAINING] main.py FAILED
[TRAINING] ------------------------------------------------------------
[TRAINING] Failures:
[TRAINING] [1]:
[TRAINING] time      : 2025-07-10_23:33:22
[TRAINING] host      : alex-System-Product-Name
[TRAINING] rank      : 1 (local_rank: 1)
[TRAINING] exitcode  : 1 (pid: 42053)
[TRAINING] error_file: <N/A>
[TRAINING] traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[TRAINING] [2]:
[TRAINING] time      : 2025-07-10_23:33:22
[TRAINING] host      : alex-System-Product-Name
[TRAINING] rank      : 2 (local_rank: 2)
[TRAINING] exitcode  : 1 (pid: 42054)
[TRAINING] error_file: <N/A>
[TRAINING] traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[TRAINING] [3]:
[TRAINING] time      : 2025-07-10_23:33:22
[TRAINING] host      : alex-System-Product-Name
[TRAINING] rank      : 3 (local_rank: 3)
[TRAINING] exitcode  : 1 (pid: 42055)
[TRAINING] error_file: <N/A>
[TRAINING] traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[TRAINING] ------------------------------------------------------------
[TRAINING] Root Cause (first observed failure):
[TRAINING] [0]:
[TRAINING] time      : 2025-07-10_23:33:22
[TRAINING] host      : alex-System-Product-Name
[TRAINING] rank      : 0 (local_rank: 0)
[TRAINING] exitcode  : 1 (pid: 42052)
[TRAINING] error_file: <N/A>
[TRAINING] traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[TRAINING] ============================================================
^CINFO:__main__:🛑 Shutting down all processes...
INFO:__main__:Stopping tensorboard...
INFO:__main__:✅ System shutdown complete
(GeneticTrading) alex@alex-System-Product-Name:/mnt/windows/GeneticTrading$ ^C
(GeneticTrading) alex@alex-System-Product-Name:/mnt/windows/GeneticTrading$ ^C
(GeneticTrading) alex@alex-System-Product-Name:/mnt/windows/GeneticTrading$ 

